--- a/review/src/main/resources/templates/hi.html
+++ b/review/src/main/resources/templates/hi.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        p{
+            border: 1px solid red;
+        }
+    </style>
 </head>
 <body>
-
+<p>안녕하세요</p>
 </body>
 </html>
