회원가입 서버 구현

--- a/review/src/main/resources/templates/Join/signUp.html
+++ b/review/src/main/resources/templates/Join/signUp.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>sign up</title>
     <link rel="stylesheet" href="../css/signUp.css">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" th:href="@{/css/signUp.css}">
 </head>
 <body>
-<form action="#" method="post" name="form">
+<form th:action th:object="${userInfo}" method="post" name="form">
 <div id="join">
     <h1>회원가입</h1>
     <table>
         <tr>
             <td>ID</td>
             <td><label>
-                <input type="text" required>
+                <input type="text" th:name="id" th::field="*{id}">
             </label></td>
         </tr>
+
         <tr>
             <td>비밀번호</td>
             <td><label>
-                <input type="password" required>
+                <input type="password" th:name="password" th:field="*{password}">
             </label></td>
         </tr>
         <tr>
             <td>비밀번호 확인</td>
             <td><label>
-                <input type="password" required>
+                <input type="password" th:field="*{password}">
             </label></td>
         </tr>
         <tr>
@@ -48,13 +49,13 @@
         <tr>
             <td>e-mail</td>
             <td><label>
-                <input type="text" name="email" required>
+                <input type="text" name="email" th:field="*{email}">
             </label></td>
         </tr>
         <tr>
             <td>e-mail 인증번호</td>
             <td><label>
-                <input type="text" name="emailCheck" required>
+                <input type="text" name="emailCheck" >
             </label></td>
         </tr>
         <tr>
