회원가입이 완료되었습니다!

--- a/review/src/main/resources/templates/MyPage/managerPwChange.html
+++ b/review/src/main/resources/templates/MyPage/managerPwChange.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>manager Pw Change</title>
-    <link rel="stylesheet" href="../css/managerPwChange.css">
+    <link rel="stylesheet" href="../../static/css/managerPwChange.css">
 </head>
 <body>
 <form action="#" method="post">
