--- a/review/src/main/resources/templates/MyPage/userPwChange.html
+++ b/review/src/main/resources/templates/MyPage/userPwChange.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>user Pw Change</title>
-    <link rel="stylesheet" href="../css/userPwChange.css">
+    <link rel="stylesheet" href="../../static/css/userPwChange.css">
 </head>
 <body>
 <form action="#" method="post">
