검증구현중

--- a/review/src/main/resources/templates/Join/signUp.html
+++ b/review/src/main/resources/templates/Join/signUp.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>sign up</title>
-    <link rel="stylesheet" href="../../static/css/signUp.css">
-    <link rel="stylesheet" th:href="@{/static/css/signUp.css}">
+    <link rel="stylesheet" href="../css/signUp.css">
+    <link rel="stylesheet" th:href="@{/css/signUp.css}">
 </head>
 <body>
 <form th:action th:object="${userInfo}" method="post" name="form">
@@ -65,7 +65,7 @@
             </td>
         </tr>
     </table>
-    <script src="../../static/js/signUp.js" charset="utf-8"></script>
+    <script src="../js/signUp.js" charset="utf-8"></script>
 </div>
 </form>
 </body>
