--- a/review/src/main/resources/templates/Join/signUpSuccess.html
+++ b/review/src/main/resources/templates/Join/signUpSuccess.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>sign up success</title>
-    <link rel="stylesheet" href="../../static/css/signUpSuccess.css">
+    <link rel="stylesheet" href="/css/signUpSuccess.css" th:href="@{/css/signUpSuccess.css}">
 </head>
 <body>
 <h1>회원가입이 완료되었습니다!</h1>
-<h3>Id</h3>
-<h3>email</h3>
+<h3  th:name="id" th:text="${userInfo.id}"></h3>
+<h3 th:name="email" th:text="${userInfo.email}"></h3>
 </body>
 </html>
