--- a/review/src/main/resources/templates/Join/signUp.html
+++ b/review/src/main/resources/templates/Join/signUp.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>sign up</title>
-    <link rel="stylesheet" href="../css/signUp.css">
+    <link rel="stylesheet" href="/css/signUp.css">
     <link rel="stylesheet" th:href="@{/css/signUp.css}">
+    <style>
+        .field-error {
+            border-color: #dc3545;
+            color: #dc3545;
+        }
+    </style>
 </head>
 <body>
 <form th:action th:object="${userInfo}" method="post" name="form">
@@ -15,8 +21,12 @@
             <td>ID</td>
             <td>
                 <label>
-                    <input type="text" th:name="id" th:field="*{id}" th:errorclass="field-error">
-                    <div class="field-error" th:error="*{id}" >
+                    <input type="text"
+                           th:name="id"
+                           th:field="*{id}"
+                           th:errorclass="field-error">
+                    <div class="field-error" th:field="*{id}" th:if="${#fields.hasErrors('id')}" th:errors="*{id}">
+                        id 오류
                     </div>
                 </label>
             </td>
@@ -24,9 +34,17 @@
 
         <tr>
             <td>비밀번호</td>
-            <td><label>
-                <input type="password" th:name="password" th:field="*{password}">
-            </label></td>
+            <td>
+                <label>
+                    <input type="password"
+                           th:name="password"
+                           th:field="*{password}"
+                           th:errorclass="field-error">
+                    <div class="field-error" th:errors="*{password}" >
+                        password 오류
+                    </div>
+                </label>
+            </td>
         </tr>
         <tr>
             <td>비밀번호 확인</td>
@@ -52,9 +70,14 @@
         </tr>
         <tr>
             <td>e-mail</td>
-            <td><label>
-                <input type="text" name="email" th:field="*{email}">
-            </label></td>
+            <td>
+                <label>
+                    <input type="text" name="email" th:field="*{email}" th:errorclass="field-error">
+                    <div class="field-error" th:errors="*{email}" >
+                        email 오류
+                    </div>
+                </label>
+            </td>
         </tr>
         <tr>
             <td>e-mail 인증번호</td>
