--- a/review/src/main/resources/templates/MyPage/managerPwChange.html
+++ b/review/src/main/resources/templates/MyPage/managerPwChange.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>manager Pw Change</title>
-    <link rel="stylesheet" href="../../static/css/managerPwChange.css">
+    <link rel="stylesheet" href="/css/managerPwChange.css">
 </head>
 <body>
 <form action="#" method="post">
