--- a/review/src/main/resources/templates/MyPage/userPwChange.html
+++ b/review/src/main/resources/templates/MyPage/userPwChange.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>user Pw Change</title>
-    <link rel="stylesheet" href="../../static/css/userPwChange.css">
+    <link rel="stylesheet" href="/css/userPwChange.css">
 </head>
 <body>
-<form action="#" method="post">
+<form action="#" method="post" th:object="${userInfo}">
     <table>
         <tr>
-            <td>ID</td><!--사용자의 아이디가 보여야함-->
+            <td th:name="id" th:text="*{id}">ID</td><!--사용자의 아이디가 보여야함-->
         </tr>
         <tr>
-            <td>비밀번호</td>
+            <td th:name="password" th:text="*{password}">비밀번호</td>
             <td><label>
                 <input type="password">
             </label></td>
