페이지 정리

--- a/review/src/main/resources/templates/Join/signUp.html
+++ b/review/src/main/resources/templates/Join/signUp.html
@@ -87,7 +87,7 @@
         </tr>
         <tr>
             <td colspan="2" class="answer">
-                <input type="button" value="나가기">
+                <input type="button" value="메인페이지로 나가기" th:onclick="|location.href='@{/MainPage}'|">
                 <input type="submit" value="가입하기">
             </td>
         </tr>
