--- a/review/src/main/resources/templates/MyPage/changeSuccess.html
+++ b/review/src/main/resources/templates/MyPage/changeSuccess.html
@@ -2,13 +2,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>sign up success</title>
-    <link rel="stylesheet" href="/css/signUpSuccess.css" th:href="@{/css/signUpSuccess.css}">
+    <title>success</title>
 </head>
 <body>
-<h1>회원가입이 완료되었습니다!</h1>
+<h1>회원정보 변경이 완료되었습니다!</h1>
 <h3 th:name="id" th:text="${userInfo.id}"></h3>
-<h3 th:name="email" th:text="${userInfo.email}"></h3>
+<h3 th:name="password" th:text="${userInfo.password}"></h3>
 <br><br><br>
 <input type="button" value="메인화면으로 돌아가기" th:onclick="|location.href='@{/MainPage}'|">
 </body>
