관리자 / 사용자 회원정보 수정기능 구현

--- a/review/src/main/resources/templates/Join/signUp.html
+++ b/review/src/main/resources/templates/Join/signUp.html
@@ -25,7 +25,7 @@
                            th:name="id"
                            th:field="*{id}"
                            th:errorclass="field-error">
-                    <div class="field-error" th:field="*{id}" th:if="${#fields.hasErrors('id')}" th:errors="*{id}">
+                    <div class="field-error" th:field="*{id}" th:errors="*{id}">
                         id 오류
                     </div>
                 </label>
