--- a/review/src/main/resources/templates/MyPage/managerPwChange.html
+++ b/review/src/main/resources/templates/MyPage/managerPwChange.html
@@ -6,21 +6,22 @@
     <link rel="stylesheet" href="/css/managerPwChange.css">
 </head>
 <body>
-<form action="#" method="post">
+<h>관리자 비밀번호 변경 페이지</h>
+<form th:action method="post" th:object="${mangerInfo}" name="form">
     <table>
         <tr>
-            <td>ID</td><!--관리자의 아이디가 보여야함-->
+            <td th:name="id" th:text="*{id}" >ID</td><!--관리자의 아이디가 보여야함-->
         </tr>
         <tr>
-            <td>비밀번호</td>
+            <td>기존 비밀번호</td>
             <td><label>
-                <input type="password">
+                <text th:text="*{password}"></text>
             </label></td>
         </tr>
         <tr>
             <td>바꿀 비밀번호</td>
             <td><label>
-            <input type="password"><!--새로운 비밀번호 입력창-->
+            <input type="password" th:field="*{password}"><!--새로운 비밀번호 입력창-->
             </label></td>
         </tr>
         <tr>
@@ -30,9 +31,9 @@
             </label></td>
         </tr>
     </table>
-    <input type="button" value="비밀번호 변경하기">
+    <input type="submit" value="비밀번호 변경하기">
     <input type="button" value="영화 등록하기">
-    <input type="button" value="나가기">
+    <input type="button" value="나가기" th:onclick="|location.href='@{/MainPage}'|">
     <input type="button" value="회원 탈퇴하기">
 </form>
 </body>
