--- a/review/src/main/resources/templates/MyPage/userPwChange.html
+++ b/review/src/main/resources/templates/MyPage/userPwChange.html
@@ -6,10 +6,17 @@
     <link rel="stylesheet" href="/css/userPwChange.css">
 </head>
 <body>
+<h>사용자 비밀번호 변경 페이지</h>
 <form th:action method="post" th:object="${userInfo}" name="form">
     <table>
         <tr>
             <td th:name="id" th:text="*{id}">ID</td><!--사용자의 아이디가 보여야함-->
+        </tr>
+        <tr>
+            <td>기존 비밀번호</td>
+            <td><label>
+                <text th:text="*{password}"></text>
+            </label></td>
         </tr>
         <tr>
             <td>바꿀 비밀번호</td>
