--- a/review/src/main/resources/templates/Join/signUp.html
+++ b/review/src/main/resources/templates/Join/signUp.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>sign up</title>
-    <link rel="stylesheet" href="/css/signUp.css">
-    <link rel="stylesheet" th:href="@{/css/signUp.css}">
+    <link rel="stylesheet" href="/static/css/signUp.css">
+    <link rel="stylesheet" th:href="@{/static/css/signUp.css}">
     <style>
         .field-error {
             border-color: #dc3545;
