--- a/review/src/main/resources/templates/Join/signUpSuccess.html
+++ b/review/src/main/resources/templates/Join/signUpSuccess.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>sign up success</title>
-    <link rel="stylesheet" href="/css/signUpSuccess.css" th:href="@{/css/signUpSuccess.css}">
+    <link rel="stylesheet" href="/static/css/signUpSuccess.css" th:href="@{/static/css/signUpSuccess.css}">
 </head>
 <body>
 <h1>회원가입이 완료되었습니다!</h1>
