--- a/review/src/main/resources/templates/MyPage/changeSuccess.html
+++ b/review/src/main/resources/templates/MyPage/changeSuccess.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>success</title>
+    <link rel="stylesheet" href="/static/css/changeSuccess.css">
 </head>
 <body>
 <h1>회원정보 변경이 완료되었습니다!</h1>
