--- a/review/src/main/resources/static/css/managerPwChange.css
+++ b/review/src/main/resources/static/css/managerPwChange.css
@@ -2,15 +2,18 @@
     margin: 0 auto;
 }
 body{
-    border: 1px solid #0000;
-    width: 315px; height: 230px;
+    width: 430px; height: 230px;
     box-sizing: border-box;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
 }
+input[type="submit"]{
+    width: 430px;
+    margin-top: 10px;
+}
 input[type="button"]{
-    width: 315px;
+    width: 430px;
     margin-top: 5px;
 }
