--- a/review/src/main/resources/templates/MyPage/managerPwChange.html
+++ b/review/src/main/resources/templates/MyPage/managerPwChange.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>manager Pw Change</title>
-    <link rel="stylesheet" href="/css/managerPwChange.css">
+    <link rel="stylesheet" href="/static/css/managerPwChange.css">
 </head>
 <body>
-<h>관리자 비밀번호 변경 페이지</h>
+<h1>관리자 비밀번호 변경 페이지</h1>
 <form th:action method="post" th:object="${mangerInfo}" name="form">
     <table>
         <tr>
