--- a/review/src/main/resources/templates/MyPage/userPwChange.html
+++ b/review/src/main/resources/templates/MyPage/userPwChange.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>user Pw Change</title>
-    <link rel="stylesheet" href="/css/userPwChange.css">
+    <link rel="stylesheet" href="/static/css/userPwChange.css">
 </head>
 <body>
-<h>사용자 비밀번호 변경 페이지</h>
+<h1>사용자 비밀번호 변경 페이지</h1>
 <form th:action method="post" th:object="${userInfo}" name="form">
     <table>
         <tr>
