--- a/review/src/main/resources/templates/MyPage/managerPwChange.html
+++ b/review/src/main/resources/templates/MyPage/managerPwChange.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>manager Pw Change</title>
     <link rel="stylesheet" href="/css/managerPwChange.css">
+    <link rel="stylesheet" th:href="/css/changeSuccess.css">
 </head>
 <body>
 <h>관리자 비밀번호 변경 페이지</h>
