--- a/review/src/main/resources/templates/MyPage/userPwChange.html
+++ b/review/src/main/resources/templates/MyPage/userPwChange.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>user Pw Change</title>
     <link rel="stylesheet" href="/css/userPwChange.css">
+    <link rel="stylesheet" th:href="@{/css/userPwChange.css}">
 </head>
 <body>
 <h>사용자 비밀번호 변경 페이지</h>
