검증파일 분리

--- a/review/src/main/resources/templates/LogIn/LogIn.html
+++ b/review/src/main/resources/templates/LogIn/LogIn.html
@@ -32,7 +32,7 @@
                     th:name="password"
                     th:field="*{password}"
                     th:errorclass="field-error">
-                    <div class="field-error" th:errors="*{id}">
+                    <div class="field-error" th:errors="*{password}">
 
                     </div>
                 </label>
