--- a/review/src/main/resources/templates/MainPage/MainPage.html
+++ b/review/src/main/resources/templates/MainPage/MainPage.html
@@ -9,5 +9,6 @@
 <a href="Join">회원가입</a>
 <a href="Login">로그인페이지</a>
 <a href="MyPage">내정보 관리 페이지</a>
+<a href="Upload">관리자 영화정보 업로드</a>
 </body>
 </html>
