--- a/review/src/main/resources/templates/MyPage/managerUploadSuccess.html
+++ b/review/src/main/resources/templates/MyPage/managerUploadSuccess.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" th:href="@{/css/managerUpload.css}">
 <head>
     <meta charset="UTF-8">
     <title>success</title>
 </head>
 <body>
-
+<img th:src="${movieInfo.moviePoster}">
 </body>
 </html>
