파일업로드 기능 구현 - 검증 0

--- a/review/src/main/resources/templates/MyPage/managerUploadSuccess.html
+++ b/review/src/main/resources/templates/MyPage/managerUploadSuccess.html
@@ -5,6 +5,6 @@
     <title>success</title>
 </head>
 <body>
-<img th:src="${movieInfo.moviePoster}">
+<img th:src="${photoUriInfo.getPath()}">
 </body>
 </html>
