검증수정중

--- a/review/src/main/resources/templates/MainPage/MainPage.html
+++ b/review/src/main/resources/templates/MainPage/MainPage.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<img th:src="${photoUriInfo}">
 메인페이지입니다.
 <a href="Join">회원가입</a>
 <a href="Login">로그인페이지</a>
