--- a/review/src/main/resources/templates/MyPage/managerUploadSuccess.html
+++ b/review/src/main/resources/templates/MyPage/managerUploadSuccess.html
@@ -5,6 +5,7 @@
     <title>success</title>
 </head>
 <body>
+업로드 성공!
 <img th:src="${photoUriInfo}">
 <input type="button" value="메인페이지로 나가기" th:onclick="|location.href='@{/MainPage}'|">
 </body>
