--- a/review/src/main/resources/templates/Join/signUp.html
+++ b/review/src/main/resources/templates/Join/signUp.html
@@ -12,8 +12,10 @@
         }
     </style>
 </head>
-<body>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
+<body>
 <form th:action th:object="${userInfo}" th:method="post" name="form">
     <div id="join">
         <h1>회원가입</h1>
@@ -75,18 +77,26 @@
                 <td>e-mail</td>
                 <td>
                     <label>
-                        <input type="text" name="email" th:field="*{email}" th:errorclass="field-error">
-                        <div class="field-error" th:errors="*{email}">
-                            email 오류
-                        </div>
+                        <input type="text" id="email" name="email" th:field="*{email}" th:errorclass="field-error">
+                        <input type="button" id="request" value="인증번호 전송" >
+                            <div class="field-error" th:errors="*{email}">
+                                email 오류
+                            </div>
+                        </input>
                     </label>
                 </td>
             </tr>
             <tr>
                 <td>e-mail 인증번호</td>
-                <td><label>
-                    <input type="text" name="emailCheck">
-                </label></td>
+                <td>
+                    <label>
+                        <input type="text" name="emailCheck" th:field="${userInfo.joinCode}" th:errorclass="field-error">
+                        <input type="submit" value="인증확인">
+                        <div class="field-error" th:errors="${userInfo.joinCode}">
+                            인증번호 오류
+                        </div>
+                    </label>
+                </td>
             </tr>
             <tr>
                 <td colspan="2" class="answer">
@@ -95,8 +105,26 @@
                 </td>
             </tr>
         </table>
-        <script src="../js/signUp.js" charset="utf-8"></script>
+        <script src="/js/signUp.js" charset="utf-8"></script>
     </div>
 </form>
+<script>
+    $('#request').click(function () {
+        var data = $("#email");
+        // ajax 통신
+        $.ajax({
+            type: "POST",                  // HTTP method type(GET, POST) 형식이다.
+            url: "/Join/emailCertification",      // 컨트롤러에서 대기중인 URL 주소이다.
+            data: data,              // 데이터
+            success: function (res) {      // 비동기통신의 성공일경우 success콜백으로 들어옵니다. 'res'는 응답받은 데이터이다.
+                // 응답코드 > 0000
+                alert("메일함을 확인해 주세요");
+            },
+            error: function (XMLHttpRequest, textStatus, errorThrown) { // 비동기 통신이 실패할경우 error 콜백으로 들어옵니다.
+                alert("통신 실패.")
+            }
+        });
+    });
+</script>
 </body>
 </html>
