인증번호 검증성공

--- a/review/src/main/resources/templates/Join/signUp.html
+++ b/review/src/main/resources/templates/Join/signUp.html
@@ -16,7 +16,7 @@
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 <body>
-<form th:action th:object="${userInfo}" th:method="post" name="form">
+<form th:action th:object="${userInfo}" th:method="post" name="form" >
     <div id="join">
         <h1>회원가입</h1>
         <table>
@@ -78,10 +78,10 @@
                 <td>
                     <label>
                         <input type="text" id="email" name="email" th:field="*{email}" th:errorclass="field-error">
-                        <input type="button" id="request" value="인증번호 전송" >
-                            <div class="field-error" th:errors="*{email}">
-                                email 오류
-                            </div>
+                        <input type="button" id="SendJoinCode" value="인증번호 전송">
+                        <div class="field-error" th:errors="*{email}">
+                            email 오류
+                        </div>
                         </input>
                     </label>
                 </td>
@@ -90,9 +90,9 @@
                 <td>e-mail 인증번호</td>
                 <td>
                     <label>
-                        <input type="text" name="emailCheck" th:field="${userInfo.joinCode}" th:errorclass="field-error">
-                        <input type="submit" value="인증확인">
-                        <div class="field-error" th:errors="${userInfo.joinCode}">
+                        <input type="text" name="emailCheck" th:field="*{joinCode}" th:errorclass="field-error">
+                        <input type="button" id="CodeComparison" value="인증확인">
+                        <div class="field-error" th:errors="*{joinCode}">
                             인증번호 오류
                         </div>
                     </label>
@@ -109,22 +109,49 @@
     </div>
 </form>
 <script>
-    $('#request').click(function () {
+    $('#SendJoinCode').click(function () {
         var data = $("#email");
         // ajax 통신
         $.ajax({
             type: "POST",                  // HTTP method type(GET, POST) 형식이다.
             url: "/Join/emailCertification",      // 컨트롤러에서 대기중인 URL 주소이다.
             data: data,              // 데이터
-            success: function (res) {      // 비동기통신의 성공일경우 success콜백으로 들어옵니다. 'res'는 응답받은 데이터이다.
-                // 응답코드 > 0000
-                alert("메일함을 확인해 주세요");
+            success: function (res) {
+                if (res.sendResult == true) {
+                    alert("메일함을 확인해 주세요")
+                }else{
+                    alert("실패")
+                }
             },
             error: function (XMLHttpRequest, textStatus, errorThrown) { // 비동기 통신이 실패할경우 error 콜백으로 들어옵니다.
                 alert("통신 실패.")
             }
         });
     });
+
+    var gbl_data;
+
+    $('#CodeComparison').click(function () {
+        var joinCompare = $("#joinCode");
+        $.ajax({
+            type: "POST",
+            url: "/Join/compare",
+            async:false, // success로 받아온 값을 전역변수에 저장하기 위한 async:false; ajax는 기본적으로 비동기로 작동하지만, 동기식으로 작동하게끔 변환한것
+            data: joinCompare,
+            success: function (result) {
+                if (result.code == 1) {
+                    gbl_data = 1;
+                    alert("인증완료")
+                } else {
+                    alert("인증 실패")
+                }
+            },
+            error: function (XMLHttpRequest, textStatus, errorThrown) {
+                alert("통신 실패.")
+            }
+        });
+    });
+
 </script>
 </body>
 </html>
