--- a/review/src/main/resources/templates/MainPage/MainPage.html
+++ b/review/src/main/resources/templates/MainPage/MainPage.html
@@ -5,11 +5,21 @@
     <title>Title</title>
 </head>
 <body>
-<img th:src="${photoUriInfo}">
 메인페이지입니다.
+</br>
+</br>
 <a href="Join">회원가입</a>
+</br>
+</br>
 <a href="Login">로그인페이지</a>
+</br>
+</br>
 <a href="MyPage">내정보 관리 페이지</a>
+</br>
+</br>
 <a href="Upload">관리자 영화정보 업로드</a>
+</br>
+</br>
+<a href="oneMovie">영화 하나 조회</a>
 </body>
 </html>
