영화 등록 페이지

--- a/review/src/main/resources/templates/MyPage/managerUpload.html
+++ b/review/src/main/resources/templates/MyPage/managerUpload.html
@@ -37,6 +37,14 @@
             </td>
         </tr>
         <tr>
+            <td>예고편 iframe 코드 : </td>
+            <td>
+                <label>
+                    <input type="text">
+                </label>
+            </td>
+        </tr>
+        <tr>
             <td>개봉연도 : </td>
             <td>
                 <label>
