--- a/review/src/main/resources/templates/MyPage/userPwChange.html
+++ b/review/src/main/resources/templates/MyPage/userPwChange.html
@@ -35,7 +35,7 @@
     <input type="submit" value="비밀번호 변경하기">
     <input type="button" value="메인페이지로 나가기" th:onclick="|location.href='@{/MainPage}'|">
 </form>
-<form th:action="@{/MyPage/delete}" th:method="get">
+<form th:action="@{/MyPage/delete}" th:method="post">
     <input type="submit" value="회원 탈퇴하기">
 </form>
 </body>
