전체 구성 변경 및 버그 해결

--- a/review/src/main/resources/templates/Join/signUpSuccess.html
+++ b/review/src/main/resources/templates/Join/signUpSuccess.html
@@ -12,6 +12,6 @@
 <h3 th:name="password" th:text="${userInfo.password}"></h3>
 <h3 th:name="email" th:text="${userInfo.email}"></h3>
 <br><br><br>
-<input type="button" value="메인화면으로 돌아가기" th:onclick="|location.href='@{/MainPage}'|">
+<input type="button" value="메인화면으로 돌아가기" th:onclick="|location.href='@{/}'|">
 </body>
 </html>
