--- a/review/src/main/resources/templates/MainPage/MainPage.html
+++ b/review/src/main/resources/templates/MainPage/MainPage.html
@@ -31,7 +31,7 @@
         // ajax 통신
         $.ajax({
             type: "GET",
-            url: "/MainPage/logout",
+            url: "/logout",
             success: function (logoutResult) {
                 alert(logoutResult)
             },
