--- a/review/src/main/resources/templates/MoviePage/MoviePageMain.html
+++ b/review/src/main/resources/templates/MoviePage/MoviePageMain.html
@@ -19,7 +19,7 @@
     </form>
  <!-- 요소들 append 들어갈 부분 -->
 </div>
-<input type="button" value="메인페이지로 나가기" th:onclick="|location.href='@{/MainPage}'|">
+<input type="button" value="메인페이지로 나가기" th:onclick="|location.href='@{/}'|">
 <script>
     $('#movieView').click(function () {
         const data = $("#movieName");
