--- a/review/src/main/resources/templates/MyPage/changeSuccess.html
+++ b/review/src/main/resources/templates/MyPage/changeSuccess.html
@@ -11,6 +11,6 @@
 <h3 th:name="id" th:text="${user.id}"></h3>
 <h3 th:name="password" th:text="${user.password}"></h3>
 <br><br><br>
-<input type="button" value="메인화면으로 돌아가기" th:onclick="|location.href='@{/MainPage}'|">
+<input type="button" value="메인페이지로 나가기" th:onclick="|location.href='@{/}'|">
 </body>
 </html>
