--- a/review/src/main/resources/templates/MyPage/managerPwChange.html
+++ b/review/src/main/resources/templates/MyPage/managerPwChange.html
@@ -34,7 +34,7 @@
     </table>
     <input type="submit" value="비밀번호 변경하기">
     <input type="button" value="영화 등록하기" th:onclick="|location.href='@{/Upload}'|">
-    <input type="button" value="나가기" th:onclick="|location.href='@{/MainPage}'|">
+    <input type="button" value="나가기" th:onclick="|location.href='@{/}'|">
 </form>
 <form th:action="@{/MyPage/delete}" th:method="post">
     <input type="submit" value="회원 탈퇴하기">
