--- a/review/src/main/resources/templates/MyPage/managerUpload.html
+++ b/review/src/main/resources/templates/MyPage/managerUpload.html
@@ -79,7 +79,7 @@
         </tr>
         <tr>
             <td colspan="2">
-                <input type="button" value="메인페이지로 나가기" th:onclick="|location.href='@{/MainPage}'|">
+                <input type="button" value="메인페이지로 나가기" th:onclick="|location.href='@{/}'|">
                 <input type="submit" value="등록하기">
             </td>
         </tr>
