--- a/review/src/main/resources/templates/Join/MsignUpSuccess.html
+++ b/review/src/main/resources/templates/Join/MsignUpSuccess.html
@@ -13,6 +13,6 @@
 <h3 th:name="email" th:text="${mangerInfo.email}"></h3>
 <h3 th:name="email" th:text="${mangerInfo.number}"></h3>
 <br><br><br>
-<input type="button" value="메인화면으로 돌아가기" th:onclick="|location.href='@{/MainPage}'|">
+<input type="button" value="메인화면으로 돌아가기" th:onclick="|location.href='@{/}'|">
 </body>
 </html>
