--- a/review/src/main/resources/templates/Join/signUp.html
+++ b/review/src/main/resources/templates/Join/signUp.html
@@ -100,7 +100,7 @@
             </tr>
             <tr>
                 <td colspan="2" class="answer">
-                    <input type="button" value="메인페이지로 나가기" th:onclick="|location.href='@{/MainPage}'|">
+                    <input type="button" value="메인페이지로 나가기" th:onclick="|location.href='@{/}'|">
                     <input type="submit" value="가입하기">
                 </td>
             </tr>
