--- a/review/src/main/resources/templates/LogIn/LogIn.html
+++ b/review/src/main/resources/templates/LogIn/LogIn.html
@@ -47,7 +47,7 @@
         </tr>
         <tr>
             <td colspan="2" class="answer">
-                <input type="button" value="메인페이지로 나가기" th:onclick="|location.href='@{/MainPage}'|">
+                <input type="button" value="메인페이지로 나가기" th:onclick="|location.href='@{/}'|">
                 <input type="submit" value="로그인하기">
             </td>
         </tr>
